refactor(templates): remove duplicated JS code

--- a/games/invest_game/templates/compare.html
+++ b/games/invest_game/templates/compare.html
@@ -42,10 +42,10 @@
 <div id="RightContentContainer"></div>
 {% endblock rightcontent %} 
 
-{% block content %}
-<!-- JavaScript code for this project -->
+{% block jscontent %}
+<!-- JavaScript code for this template -->
 <script type="text/javascript">
   $("#RightContentContainer").height($(window).height() * 0.75);
   $("#RightContentContainer").width($(window).width() / 2);
 </script>
-{% endblock content %}
+{% endblock jscontent %}
