--- a/games/invest_game/templates/finish.html
+++ b/games/invest_game/templates/finish.html
@@ -14,10 +14,10 @@
 <div id="RightContentContainer"></div>
 {% endblock rightcontent %} 
 
-{% block content %}
-<!-- JavaScript code for this project -->
+{% block jscontent %}
+<!-- JavaScript code for this template -->
 <script type="text/javascript">
   $("#RightContentContainer").height($(window).height() * 0.7);
   $("#RightContentContainer").width($(window).width() / 2);
 </script>
-{% endblock content %}
+{% endblock jscontent %}
