--- a/games/core/templates/base.html
+++ b/games/core/templates/base.html
@@ -130,12 +130,48 @@
       </div>
     </div>
 
-    <div class="row transBackground">
-      {% block content %}{% endblock %}
+    <div class="row">
+      <div class="col-md-12">
+        {% block content %}{% endblock content %}
+      </div>
     </div>
 
     <div class="navbar navbar-inverse navbar-fixed-bottom">
       <p>&copy; University of Michigan, School of Information {% now "Y" %}</p>
     </div>
+
+    <!-- Core JS functionality: -->
+    <script type="text/javascript">
+      var csrftoken = getCookie("um-online-study-game-csrftoken");
+      function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie != "") {
+          var cookies = document.cookie.split(";");
+          for (var i = 0; i < cookies.length; i++) {
+            var cookie = jQuery.trim(cookies[i]);
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) == name + "=") {
+              cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+              break;
+            }
+          }
+        }
+        return cookieValue;
+      }
+
+      function csrfSafeMethod(method) {
+        // these HTTP methods do not require CSRF protection
+        return /^(GET|HEAD|OPTIONS|TRACE)$/.test(method);
+      }
+      $.ajaxSetup({
+        beforeSend: function(xhr, settings) {
+          if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+            xhr.setRequestHeader("X-CSRFToken", csrftoken);
+          }
+        },
+      });
+    </script>
+
+    {% block jscontent %}{% endblock jscontent %}
   </body>
 </html>
