--- a/games/invest_game/templates/question1.html
+++ b/games/invest_game/templates/question1.html
@@ -149,8 +149,8 @@
 <div id="RightContentContainer"></div>
 {% endblock rightcontent %} 
 
-{% block content %}
-<!-- JavaScript code for this project -->
+{% block jscontent %}
+<!-- JavaScript code for this template -->
 <script type="text/javascript">
   $("#RightContentContainer").height($("#questionnaire_si0").height());
   var keep = Math.floor(Math.random() * 3);
@@ -162,34 +162,6 @@
         $(elems[i]).hide();
       }
     }
-  });
-  function getCookie(name) {
-    var cookieValue = null;
-    if (document.cookie && document.cookie != "") {
-      var cookies = document.cookie.split(";");
-      for (var i = 0; i < cookies.length; i++) {
-        var cookie = jQuery.trim(cookies[i]);
-        // Does this cookie string begin with the name we want?
-        if (cookie.substring(0, name.length + 1) == name + "=") {
-          cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-          break;
-        }
-      }
-    }
-    return cookieValue;
-  }
-  var csrftoken = getCookie("um-online-study-game-csrftoken");
-
-  function csrfSafeMethod(method) {
-    // these HTTP methods do not require CSRF protection
-    return /^(GET|HEAD|OPTIONS|TRACE)$/.test(method);
-  }
-  $.ajaxSetup({
-    beforeSend: function(xhr, settings) {
-      if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-        xhr.setRequestHeader("X-CSRFToken", csrftoken);
-      }
-    },
   });
 
   $("#questionform").submit(function(event) {
@@ -204,4 +176,4 @@
     } 
   });
 </script>
-{% endblock content %}
+{% endblock jscontent %}
