--- a/games/core/templates/base.html
+++ b/games/core/templates/base.html
@@ -121,23 +121,26 @@
       </div>
     </nav>
 
-    <div class="row">
-      <div class="col-md-6 ">
-        {% block leftcontent %}{% endblock %}
+    <div class="container-fluid" id="content-container">
+      <div class="row">
+        <div class="col-md-6 ">
+          {% block leftcontent %}{% endblock %}
+        </div>
+        <div class="col-md-6">
+          {% block rightcontent %}{% endblock %}
+        </div>
       </div>
-      <div class="col-md-6">
-        {% block rightcontent %}{% endblock %}
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-md-12">
-        {% block content %}{% endblock content %}
+      <div class="row">
+        <div class="col-md-12">
+          {% block content %}{% endblock content %}
+        </div>
       </div>
     </div>
 
     <div class="navbar navbar-inverse navbar-fixed-bottom">
-      <p>&copy; University of Michigan, School of Information {% now "Y" %}</p>
+      <p id="browser-warning-msg">WARNING: Please do not use the browser buttons to go back or forward, or we might not be able to retrieve your responses and pay you!</p>
+      <p id="copyright">&copy; University of Michigan, School of Information {% now "Y" %}</p>
     </div>
 
     <!-- Core JS functionality: -->
