--- a/games/invest_game/templates/respondent_investment.html
+++ b/games/invest_game/templates/respondent_investment.html
@@ -9,7 +9,7 @@
       Next, guess how much {{respondent}} will give back to you. You receive a
       bonus for a good guess – if your guess is within $1 of the actual amount,
       you will earn an additional $2. How much do you think the {{respondent}}
-      has decided to give back to you?
+      has decided to give back to you? Please use the slider at the right to make a decision.
     </h3>
   </div>
 </div>
