--- a/games/invest_game/templates/user_investment.html
+++ b/games/invest_game/templates/user_investment.html
@@ -37,7 +37,7 @@
       </li>
     </ul>
     <h3>
-      You now have $5. How much you would like to pass to {{respondent}}?
+      You now have $5. How much you would like to pass to {{respondent}}? Please use the slider at the right to make a decision.
     </h3>
   </div>
 </div>
